--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div id="status"></div>
 
     <script>
-        const COLAB_NOTEBOOK_URL = 'https://colab.research.google.com/drive/YOUR_NOTEBOOK_ID';
+        const COLAB_NOTEBOOK_URL = 'https://colab.research.google.com/drive/17-h1G_9Kr9bFHBEDOAYk5wkZgKMNLqu3?usp=sharing';
 
         document.getElementById('video-form').addEventListener('submit', async (e) => {
             e.preventDefault();
